Fixed about dialog text error
Change-Id: I04f056a354a53b14135bbc304fb22a9980f58631

--- a/gui_port/Resource.qrc
+++ b/gui_port/Resource.qrc
@@ -1,8 +1,10 @@
 <RCC>
     <qresource prefix="/">
+        <file>Resource/remote-assistance-48.png</file>
+        <file>Resource/remote-assistance-logo.png</file>
+        <file>Resource/remote-assistance-96.png</file>
+        <file>Resource/remote-assistance.svg</file>
+        <file>Resource/remote-assistance.ico</file>
         <file>Resource/logo.png</file>
-        <file>Resource/print-agent.svg</file>
-        <file>Resource/print-agent-48.png</file>
-        <file>Resource/print-agent-96.png</file>
     </qresource>
 </RCC>
