Fixed white button style
Change-Id: Ib03cdc5bdbba6866e561db1a8bf9ebc60bc19612

--- a/gui_port/theme.qrc
+++ b/gui_port/theme.qrc
@@ -114,5 +114,6 @@
         <file>dark/images/Spinner32/Spinner89.png</file>
         <file>dark/images/Spinner32/Spinner90.png</file>
         <file>dark/images/logo.svg</file>
+        <file>dark/WhiteButton.theme</file>
     </qresource>
 </RCC>
